# HIKARI_BOT

./: .gitignore  CLAUDE.md  DEPENDENCIES.md  README.md  bot.py  bump_build.py  config.example.json  deploy.ps1  pyproject.toml  test_embedding.py  version.json
data/skills/: taffy.json
deploy/: hikari-bot.service
prompts/: hikari.txt
skills/taffy/: SKILL.md
src/core/: __init__.py  config.py  embedding.py  log_handler.py  logger.py  message_store.py
src/plugins/: admin.py  agent.py  ai_chat.py  file_sender.py  hello.py  help.py  image_sender.py  media_sender.py  message_collector.py  poke.py  skill_manager.py  video_parser.py
src/plugins/agent/: __init__.py  client.py  memory.py  onebot_tools.py  tools.py
src/plugins/agent/tools/: __init__.py  chat.py  group_info.py  manage_memory.py  media_parser.py  misc.py  profile.py  search.py  semantic_search.py  send_file.py  show_help.py  whitelist.py
