[project]
name = "HIKARI_BOT"
version = "0.1.0"
description = "HIKARI_BOT"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2[fastapi]>=2.5.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-docs>=2.5.0",
    "nonebot-plugin-sentry>=2.0.0",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-docs = ["nonebot_plugin_docs"]
nonebot-plugin-sentry = ["nonebot_plugin_sentry"]
